# LightSearchEngine

./: .gitignore  CMakeLists.txt  build.sh  createTable.sql  format.py
client/conf/: client.conf
client/include/: Colours.h  Configuration.h  Connection.h  InetAddr.h  ProtocolParser.h  Socket.h  SocketIO.h  TcpClient.h  TcpConnection.h
client/src/: Configuration.cpp  Connection.cpp  InetAddr.cpp  ProtocolParser.cpp  Socket.cpp  SocketIO.cpp  TcpClient.cpp  TcpConnection.cpp  main.cpp
conf/: server.conf
data/: lru.bak  stopWord.txt  stop_words_zh.txt
include/PageLib/: DirScanner.h  PageLibPreprocessor.h  RssReader.h  Simhasher.hpp  SplitTool.h  WebPage.h  jenkins.h  tinyxml2.h
include/dict/: CandidateResult.h  Dictionary.h  EditDistance.h  Recommender.h
include/indexgen/: dictionary.h
include/server/: Acceptor.h  Condition.h  EventLoop.h  InetAddress.h  MutexLock.h  NonCopyable.h  ProtocolParser.h  SearchServer.h  Socket.h  SocketIO.h  TaskQueue.h  TcpConnection.h  TcpServer.h  Thread.h  ThreadPool.h  Timerfd.h
include/utility/: CacheManager.h  CppJieba.h  LRUCache.h  Query.h  RedisServer.h  SplitTool.h  Time.h  WebPageQuery.h  configure.h  mylogger.h
src/PageLib/: DirScanner.cc  PageLibPreprocessor.cc  RssReader.cc  SplitTool.cc  WebPage.cc  main.cc  tinyxml2.cc
src/dict/: ChRecommender.cc  EditDistance.cc  EnRecommender.cc  MixedRecommender.cc
src/indexgen/: DirScanner.cc  dictionary.cc  main.cc
src/server/: Acceptor.cc  Condition.cc  EventLoop.cc  InetAddress.cc  MutexLock.cc  ProtocolParser.cc  SearchServer.cc  Socket.cc  SocketIO.cc  TaskQueue.cc  TcpConnection.cc  TcpServer.cc  Thread.cc  ThreadPool.cc  Timerfd.cc  main.cc
src/utility/: CacheManager.cc  Configure.cc  CppJieba.cc  LRUCache.cc  Mylogger.cc  Query.cc  RedisServer.cc  Time.cc  WebPageQuery.cc
